--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
+    "angular-resource": "1.7.x",
     "angular-route": "^1.7.5",
+    "bootstrap": "^4.1.3",
     "html5-boilerplate": "0.0.1"
   },
   "devDependencies": {
